--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,6 +9,6 @@
 <body th:with="httpStatus=${T(org.springframework.http.HttpStatus).valueOf(#response.status)}">
 <h1 th:text="|${httpStatus} - ${httpStatus.reasonPhrase}|">404</h1>
 <p th:utext="${errorMessage}">Error java.lang.NullPointerException</p>
-<a href="welcome.html" th:href="@{/}">Back to Home Page</a>
+<a href="welcome.html" th:href="@{/}">Retour à l'accueil</a>
 </body>
 </html>
