--- a/src/main/resources/templates/pageSouvenir.html
+++ b/src/main/resources/templates/pageSouvenir.html
@@ -4,18 +4,40 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-            <link rel="stylesheet" type="text/css" th:href="@{/css/pageSouvenir.css}" href="../static/css/pageSouvenir.css" />
+        <link rel="stylesheet" type="text/css" th:href="@{/css/pageSouvenir.css}" href="../static/css/pageSouvenir.css" />
         <title>Page souvenir</title>
-        <div class="navbar">
-            <a href="#" th:href="@{/welcome}"><img src="/Logo.png" /></a>
-            
-            <a id="souvenir" href="#" th:href="@{/user/preferencesReseaux}" class="souvenirsU" target="_blank">Préférences Réseaux</a>
-            <a id="tuto" href="#" th:href="@{/user/pageSouvenir}" class="tutorielsU" target="_blank">Page Souvenir</a>
-            <a id="infos" href="#" th:href="@{/user/informationsUtilisateur}" class="informationU" target="_blank">Informations Utilisateur</a>
+        <div class="nav">
+            <div class="container">
+                    <div class="logo">
+                        <a href="#" th:href="@{/welcome}"><img id="logo" src="/logoNavbar.png"></a>
+                    </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">Menu
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div sec:authorize="hasRole('ROLE_ADMIN')">
+
+                            <div class="dropdown-content">
+                                <form id="logoutForm" method="POST" th:action="@{/logout}" action="#">
+                                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+                                </form>
+                                <a onclick="document.forms['logoutForm'].submit()">Déconnexion</a>
+                            </div>
+                        </div>
+                            <div class="dropdown-content">
+                                <form id="logoutForm" method="POST" th:action="@{/logout}" action="#">
+                                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+                                </form>
+                                <a onclick="document.forms['logoutForm'].submit()">Déconnexion</a>
+                                <a href="#" th:href="@{/user/pageSouvenir}">Page souvenir</a>
+                                <a href="#" th:href="@{/user//preferencesResaux}" class="active">Préférences Réseaux</a>
+                                <a href="#" th:href="@{/user/informationsUtilisateur}">Informations Utilisateur</a>
+                            </div>
+                    </div>
+            </div>
         </div>
   </head>
   <body>
-      
         <div sec:authorize="hasRole('ROLE_USER')">
             <h1>Creéz une page souvenir à laquelle vos proches pourront accéder</h1>
 
@@ -32,6 +54,7 @@
             <div id="zoneTexte">
                 <p>Écrivez un texte à vos proches : </p>
                 <textarea name="texte" id="texte" cols="30" rows="20"></textarea>
+                <button id="boutonAjouter">Ajouter</button>
             </div>
         </div>
         <div sec:authorize="hasRole('ROLE_FAMILLE')">
@@ -47,7 +70,7 @@
             <div id="zoneTexte">
                 <p>Le message de votre proche : </p>
                 <div>
-                    <img id="guillemets" src="images/guillemets.png" height="80" width="80">
+                    <img id="guillemets" src="/guillemets.png" height="80" width="80">
                     <br><br>
                     <p id="texte">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -59,6 +82,5 @@
                 </div>
             </div>
         </div>
-        
     </body>
 </html>
