ajout de la pageAdmin html+css

--- a/src/main/resources/static/css/pageAdmin.css
+++ b/src/main/resources/static/css/pageAdmin.css
@@ -6,7 +6,7 @@
 .nav {
   margin: 0;
   padding: 0;
-  font-family: "Nunito";
+  font-family: "Nunito Sans";
   font-size: 10px;
   width: 100%;
   height: 100px;
@@ -28,21 +28,16 @@
   margin-right: 20px;
   color: white;
   padding: 32px 16px;
-  font-family: "Nunito";
   font-size: 25px;
   text-decoration: none;
   display: inline-flex;
   text-align: center;
 }
 
-.dropdown-content a:hover {
-  font-family: "Nunito Sans";
-}
-
 #logo {
   position: absolute;
   top: 0px;
-  left: -10px;
+  left: 0px;
   height: 100px;
   width: auto;
 }
@@ -108,93 +103,74 @@
   }
 }
 
-#infos {
-  padding-left: 90px;
-  padding-right: 90px;
+body {
+    margin-top: 120px;
+    font-family: "Nunito";
+    background-repeat: no-repeat;
+    background-image: url(/BG1.png);
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    top: 0;
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
+
 
 h1 {
-  text-align: center;
-  margin-bottom: 50px;
-  margin-top: 150px;
-  font-size: 55px;
-  font-weight: bold;
-  font-family: "Nunito Sans";
+    font-family: "Nunito Sans";
+    text-align: center;
 }
 
-
-p {
-  font-size: large;
+li {
+    margin-left: 40px;
+    margin-top: 20px;
 }
 
-body {
-  font-family: "Nunito";
-  background-image: url("/fond2.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+#texteAccueil {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-size: 25px;
 }
 
-#p1 {
-  text-align: center;
-  margin-left: 20%;
-  margin-right: 20%;
-  font-size: 25px;
+#scan {
+    margin-top: 20px;
+    min-width: max-content;
 }
 
-#ajouteFichiers,
-#telechargeFichiers
-{
-  display: inline-block;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 2%;
-  width: 27%;
-  height: 250px;
-  border-right: 1px solid black;
+#submit {
+    float: right;
 }
 
-#fichiers {
-  display: inline-block;
-  margin-left: 5%;
+.label, #bdd {
+    cursor: pointer;
+    height: 40px;
+    border: solid;
+    border-color: black;
+    border-width: 2px;
+    padding: 5px;
+    padding-left: 72px;
+    padding-right: 72px;
+    color: grey;
+    font-size: 1.3em;
+    font-family: "Nunito";
 }
 
-#boutonAjouter {
-  margin-bottom: 50px;
-  float: right;
-  background-color: black;
-  color: white;
-  padding: 7px;
-  padding-left: 50px;
-  padding-right: 50px;
-  border: none;
+#scanner {
+display: none;
 }
 
-textarea {
-  width: 100%;
-  height: 150px;
+#supprimer {
+    padding-top: 20px;
+    margin-left: 50%;
 }
 
-#zoneTexte {
-  display: inline-block;
-  margin-right: 80px;
-  width: 62%;
-  float: right;
-}
-
-#label-file {
-  cursor: pointer;
-  height: 40px;
-  border: solid;
-  border-color: black;
-  border-width: 2px;
-  padding: 5px;
-  padding-left: 72px;
-  padding-right: 72px;
-  color: grey;
-  font-size: 1.3em;
-  font-family: "Nunito";
-}
-
-#joindre {
-  display: none;
+#div-bdd {
+    margin-top: 50px;
+    margin-left: 10%;
 }
