--- a/src/main/resources/templates/pageAdmin.html
+++ b/src/main/resources/templates/pageAdmin.html
@@ -1,39 +1,58 @@
-
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org" lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" type="text/css" th:href="@{/css/pageAdmin.css}" href="../static/css/pageAdmin.css" />
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page Administrateur</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}" href="../static/css/common.css" />
-</head>
+        <title>Espace utilisateur</title>
+        <nav class="nav">
+            <div class="container">
+                <div class="logo">
+                    <a href="#" th:href="@{/welcome}"><img id="logo" src="/logoNavbar.png"></a>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Menu
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div>
+                        <div class="dropdown-content">
+                            <form id="logoutForm" method="POST" th:action="@{/logout}" action="#">
+                                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+                            </form>
+                            <a onclick="document.forms['logoutForm'].submit()">Déconnexion</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </head>
+    <body>
+        <h1>BIENVENUE SUR LA PAGE ADMINISTRATEUR</h1>
 
-<body>
-<div class="container">
-    <h2 class="form-heading">Page Administrateur</h2>
-    <div>Votre email est : <span sec:authentication="principal.email">ab.cd@xyz.com</span></div>
-    <div>Vous avez également accès à cette
-        <a href="pageUser.html" th:href="@{/user/pageUser}">page accessible aux utilisateurs</a>
-    </div>
-    <a href="welcome.html" th:href="@{/}">Back to Home Page</a>
-    <div sec:authorize="hasRole('ROLE_ADMIN')">
-        <h3>Vous êtes administrateur</h3>
-        <a href="#" th:href="@{/h2-console}">Console d'administration de la BD (JDBC URL: jdbc:h2:mem:testdb) - désactivé sur Heroku</a><br>
-        <a href="#" th:href="@{/admin/pageAdmin}">Page réservée aux admins</a>
-    </div>
-    <form th:action="@{/scan/new}" method="POST">
-        <button type="submit">Scan</button>
-    </form>
-    <label for="utilDecedes">Utilisateurs décédés : </label>
-    <li name="utilDecedes" th:each="u: ${utilisateurs}">
-        Nom: <em th:text="${u.nom}">Nom de l'utilisateur</em>,
-        Prenom: <em th:text="${u.prenom}">Prenom de l'utilisateur</em>
-        <a th:href="@{delete(id=${u.id})}">Supprimer l'utilisateur n° [[${u.id}]]</a>
-    </li>
-    
-</div>
-<script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
-</body>
+        <div id="texteAccueil">
+            <p>Sur cette page vous pouvez détecter si l'un des utilisateurs de Legac.e est décédé le mois dernier et accéder à la base de données</p>
+        </div>
+        <div>
+            <br>
+            <label class="label" for="scanner">SCANNER LE FICHIER DE PERSONNES DÉCÉDÉES</label>
+            <form id="submit" th:action="@{/scan/new}" method="POST">
+                <button id="scanner" name="scanner" type="submit">Scanner</button>
+            </form>
+            <br><br>
+            <div id="scan" name="scan">
+                <label for="utilDecedes">Utilisateurs décédés : </label>
+                <li name="utilDecedes" th:each="u: ${utilisateurs}">
+                    Nom: <em th:text="${u.nom}">Nom de l'utilisateur</em>
+                    Prenom: <em th:text="${u.prenom}">Prenom de l'utilisateur</em> <br><br>
+                    <a id="supprimer" th:href="@{delete(id=${u.id})}">Supprimer l'utilisateur n° [[${u.id}]]</a>
+                    <br>
+                </li>
+            </div>
+            <div id="div-bdd">
+                <a href="#" th:href="@{/h2-console}"><button id="bdd">ACCÉDER À LA BASE DE DONNÉES</button></a>
+            </div>
+        </div>
+    </body>
 </html>
