--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -30,8 +30,8 @@
           <input type="date" name="dateNaiss" th:field="*{dateNaiss}" id="dateNaiss" required />
           <select id="sexe" th:field="*{sexe}" name="sexe">
             <option value="" disabled selected hidden>SEXE*</option>
-            <option value="homme">Homme</option>
-            <option value="femme">Femme</option>
+            <option th:value="1">Homme</option>
+            <option th:value="2">Femme</option>
           </select>
         </p>
         <p>
