--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -43,6 +43,7 @@
                                     <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
                                 </form>
                                 <a onclick="document.forms['logoutForm'].submit()">Déconnexion</a>
+                                <a href="#" th:href="@{/admin/pageAdmin}">Page Admin</a>
                             </div>
                         </div>
 
@@ -101,18 +102,11 @@
             <a th:href="@{/connect/twitter}"><button>Se Connecter à Twitter</button></a>
 
             <h2>Welcome <span th:text="${#authentication.name}">Untel</span></h2>
-            <!-- Pour les utilisateurs qui ont le rôle 'ROLE_ADMIN' -->
-            <div sec:authorize="hasRole('ROLE_ADMIN')">
-                <h3>Vous êtes administrateur</h3>
-                <a href="#" th:href="@{/h2-console}">Console d'administration de la BD (JDBC URL: jdbc:h2:mem:testdb) - désactivé sur Heroku</a><br>
-                <a href="#" th:href="@{/admin/pageAdmin}">Page réservée aux admins</a>
-            </div>
+
             <!-- Pour les utilisateurs qui ont le rôle 'ROLE_USER' -->
             <div sec:authorize="hasRole('ROLE_USER')">
                 <h3>Vous êtes un simple utilisateur !</h3>
                 <a href="#" th:href="@{/user/pageUser}">Page réservée aux utilisateurs connectés</a>
-                <a href="#" th:href="@{/user/pageSouvenir}">Page réservée aux utilisateurs connectés</a>
-
             </div>
         </body>
     </div>
